css/advertisements.css
/***********************/
/* Advertisement Slots */
/***********************/
.footer-ad #footermrec {
	height: 250px !important;
	width: 300px !important;
}

div#atflb, div#btflb {
	display: block;
	height: 90px !important;
	margin: 0 auto;
	padding: 5px 0;
	width: 728px !important;
}

div#atflb > iframe, div#btflb > iframe {
	display: block;
	height: 90px !important;
	margin: 0 auto;
	padding: 0;
	width: 728px !important;
}

div#btflb {
	clear: both;
}

div#atflb > div {
	margin: 0 auto;
}

div.mobileatfmrec, div#footermrec {
	float: none;
}

div.mobileatfmrec {
	margin: 15px auto;
	text-align: center;
}

div#footermrec {
	margin: 0 auto;
}

div#mobileatfmrec {
	border-bottom: 1px solid #e2e3e4;
	border-top: 1px solid #e2e3e4;
	margin: 0.5em 0;
	padding: 8px;
	text-align: center;
}

div#mobileatflb {
	position:fixed;
	bottom:0;
	margin:0 auto;
	width:100%;
	text-align:center;
	z-index:999999 !important;
}

.mobileInject {
	margin: 0 auto !important;
	text-align:center !important;
	padding-bottom: 10px !important;
}

div#mobilebtfmrec {
	text-align: center;
}

div#zergnet_container {
	clear: both;
	margin: 10px 0;
	width: 100%;
}

#siderail {
	display: none;
}

@media screen and (min-width: 990px) {
	#global-wrapper.with-siderail #content #bodyContent {
		box-sizing: border-box;
		float: left;
		width: calc(100% - 320px);
	}

	/* Side Rail */
	#siderail {
		background-color: rgba(0, 0, 0, 0.1);
		box-sizing: border-box;
		display: block;
		float: right;
		min-height: 500px;
		position: relative;
		text-align: center;
		width: 310px;
		z-index: 1000000;
	}

	#siderail > * {
		max-width: 300px;
		margin: 5px auto;
	}

	#siderail div#atfmrec, #siderail div#btfmrec {
		border: none !important;
		width: 300px !important;
	}

	#gp-pro-upsell {
		height: 73px;
		width: 300px;
	}

	#gp-pro-upsell > a img {
		animation: gpProUpsellAnimation 10s linear infinite;
		background-image: url("../images/gppro/gpproupsellshortback.png");
	}

	@keyframes gpProUpsellAnimation {
		from { background-position: 0 0; }
		to { background-position: -307px 0; }
	}
}

